--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@types/react": "^18.3.5",
     "axios": "^1.7.2",
     "next": "^14.2.7",
@@ -19,7 +21,7 @@
     "@types/node": "^20",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
